Bug 295906 - samba password not remembered
Summary: samba password not remembered
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: smb (other bugs)
Version First Reported In: 4.9.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 91749 101307 271018 293158 309488 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-13 09:50 UTC by Silver Salonen
Modified: 2013-08-18 20:34 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2012-03-13 09:50:23 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/535.21 (KHTML, like Gecko) Chrome/19.0.1046.0 Safari/535.21 SUSE/19.0.1046.0
Build Identifier: 

Every time I log into KDE and enter my Samba server, Dolphin asks for smb password, altough I always check the box for it to remember the password.

Reproducible: Always

Steps to Reproduce:
1. Log into KDE
2. Start Dolphin
3. Go to some smb:/ server
4. When logging in, check the "Remember password" box
5. Log out of KDE
6. Perform steps 1-3
Actual Results:  
Logging in dialog is prompted

Expected Results:  
Username and password should be taken as the ones having been saved
Comment 1 kde 2012-08-22 16:35:55 UTC
I can verify that the same problem exists on my system with KDE 4.8.5.
Comment 2 Silver Salonen 2012-08-23 07:12:15 UTC
It also happens in 4.9.0.
Comment 3 Alessio Cassibba (X-Drum) 2012-09-06 17:21:00 UTC
Same problem here with the 4.9.1 release, running on gentoo.
I noticed that the password is not stored on kwallet which is already unlocked 
(and used successfully by other applications).
Comment 4 Tom 2012-10-15 07:37:18 UTC
I have the same problem on 4.9.2 with Kubuntu. 
Always when opening Dolphin and browsing to an SMB share, it is asked for username and password, even if I check thie "Remember" checkbox. This is extremly annoying - I am not playing with KDE, I use it in my business for work. As I see there are tickets for this problem since 2004!! 

I would be really happy if somebody could fix this issue.
Thanks!
Comment 5 Dawit Alemayehu 2012-10-16 21:35:31 UTC
*** Bug 293158 has been marked as a duplicate of this bug. ***
Comment 6 Dawit Alemayehu 2012-10-16 22:26:36 UTC
*** Bug 271018 has been marked as a duplicate of this bug. ***
Comment 7 Dawit Alemayehu 2012-10-18 00:50:48 UTC
Git commit 9c0021e98c0c6a808ffa82449d355a64ecef4552 by Dawit Alemayehu.
Committed on 18/10/2012 at 02:40.
Pushed by adawit into branch 'KDE/4.9'.

Store passwords in wallet when the "Remember password" checkbox is checked in
the authorization dialog.

Patch by Gordian Klein.
FIXED-IN:4.9.3
REVIEW:106909
CCMAIL:gordian.klein@googlemail.com

M  +7    -0    kioslave/smb/kio_smb_auth.cpp

http://commits.kde.org/kde-runtime/9c0021e98c0c6a808ffa82449d355a64ecef4552
Comment 8 Dawit Alemayehu 2012-10-18 00:52:36 UTC
Git commit 177ce2a7b5b69c1f9ef1355d1d158cacb60cd555 by Dawit Alemayehu.
Committed on 18/10/2012 at 02:40.
Pushed by adawit into branch 'master'.

Store passwords in wallet when the "Remember password" checkbox is checked in
the authorization dialog.

Patch by Gordian Klein.
FIXED-IN:4.9.3
REVIEW:106909
CCMAIL:gordian.klein@googlemail.com
(cherry picked from commit 9c0021e98c0c6a808ffa82449d355a64ecef4552)

M  +7    -0    kioslave/smb/kio_smb_auth.cpp

http://commits.kde.org/kde-runtime/177ce2a7b5b69c1f9ef1355d1d158cacb60cd555
Comment 9 Francois Prunier 2012-10-18 21:21:15 UTC
Thanks for fixing the issue Dawit :)
Comment 10 Christoph Feck 2012-11-05 16:27:52 UTC
*** Bug 309488 has been marked as a duplicate of this bug. ***
Comment 11 Dawit Alemayehu 2013-08-18 20:34:34 UTC
*** Bug 91749 has been marked as a duplicate of this bug. ***
Comment 12 Dawit Alemayehu 2013-08-18 20:34:43 UTC
*** Bug 101307 has been marked as a duplicate of this bug. ***