Store passwords in wallet when the "Remember password" checkbox is checked in the authorization dialog.

Patch by Gordian Klein.

BUG:295906
FIXED-IN:4.9.3
REVIEW:106909
CCMAIL:gordian.klein@googlemail.com
(cherry picked from commit 9c0021e98c0c6a808ffa82449d355a64ecef4552)